[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/sprites/highres_triangle.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/munro.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/GUI elements/player_control/PlayerControl.gd" type="Script" id=3]
[ext_resource path="res://scenes/GUI elements/healthbar/Healthbar.gd" type="Script" id=4]
[ext_resource path="res://assets/sprites/square.png" type="Texture" id=5]
[ext_resource path="res://scenes/GUI elements/resourcebar/Resourcebar.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="PlayerControl" type="Control"]
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelLabel" type="Label" parent="."]
margin_left = 768.0
margin_right = 1000.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.8, 0.745098, 0.439216, 1 )
text = "LEVEL : 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerHealthBar" type="TextureProgress" parent="."]
margin_left = 8.0
margin_top = 496.0
margin_right = 104.0
margin_bottom = 592.0
value = 25.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 1 )
fill_mode = 3
tint_progress = Color( 0.52549, 0.827451, 0.317647, 1 )
nine_patch_stretch = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="PlayerHealthBar"]

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 56, 624 )
rotation = 3.14159

[node name="PlayerResourceBar" type="TextureProgress" parent="Node2D"]
margin_left = -104.0
margin_top = 31.9997
margin_right = -8.00009
margin_bottom = 128.0
value = 10.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 1 )
fill_mode = 2
tint_progress = Color( 0.811765, 0.231373, 0.231373, 1 )
nine_patch_stretch = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Node2D/PlayerResourceBar"]

[node name="SecondaryAbilityBar" type="TextureProgress" parent="."]
margin_left = 896.0
margin_top = 496.0
margin_right = 992.0
margin_bottom = 592.0
step = 0.5
value = 45.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 5 )
fill_mode = 3
tint_progress = Color( 0.2, 0.443137, 0.72549, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SecondaryAbilityBar"]
margin_right = 96.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 2 )
text = "test"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
